tests/baselines/reference/nodeModulesAllowJsExportAssignment(module=nodenext).errors.txt
tests/cases/conformance/node/allowJs/index.js(3,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
tests/cases/conformance/node/allowJs/index.js(3,1): error TS8003: 'export =' can only be used in TypeScript files.
tests/cases/conformance/node/allowJs/subfolder/index.js(3,1): error TS8003: 'export =' can only be used in TypeScript files.


==== tests/cases/conformance/node/allowJs/subfolder/index.js (1 errors) ====
    // cjs format file
    const a = {};
    export = a;
    ~~~~~~~~~~~
!!! error TS8003: 'export =' can only be used in TypeScript files.
==== tests/cases/conformance/node/allowJs/subfolder/file.js (0 errors) ====
    // cjs format file
    const a = {};
    module.exports = a;
==== tests/cases/conformance/node/allowJs/index.js (2 errors) ====
    // esm format file
    const a = {};
    export = a;
    ~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
    ~~~~~~~~~~~
!!! error TS8003: 'export =' can only be used in TypeScript files.
==== tests/cases/conformance/node/allowJs/file.js (0 errors) ====
    // esm format file
    import "fs";
    const a = {};
    module.exports = a;
==== tests/cases/conformance/node/allowJs/package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== tests/cases/conformance/node/allowJs/subfolder/package.json (0 errors) ====
    {
        "type": "commonjs"
    }